k8s/4-dapp/dapp-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    service: custom-dapp
  name: custom-dapp
  namespace: koinos
spec:
  replicas: 1
  selector:
    matchLabels:
      service: custom-dapp
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  template:
    metadata:
      labels:
        service: custom-dapp
    spec:
      containers:
        - name: custom-dapp
          image: {user}/{repository}:{tag}
          resources:
            requests:
              memory: "64Mi"
              cpu: "250m"
            limits:
              memory: "128Mi"
              cpu: "500m"
          ports:
            - containerPort: 80
          readinessProbe:
            tcpSocket:
              port: 80
            initialDelaySeconds: 5
            periodSeconds: 5
          livenessProbe:
            httpGet:
              path: /#/health
              port: 80
          imagePullPolicy: Always
      serviceAccountName: default
