k8s/4-dapp/dapp-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    service: custom-dapp
  name: custom-dapp
  namespace: koinos
spec:
  ports:
    - name: "8000"
      port: 8000
      targetPort: 80
  selector:
    service: custom-dapp
  type: LoadBalancer
